# EPP_RFR

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
Results/: Results.txt
paper/: rfr_final.tex  rfr_final_pres.tex  task_paper.py
src/rfr_final/: __init__.py
src/rfr_final/analysis/: model.py  task_analysis.py
src/rfr_final/data_management/: __init__.py  clean_data.py  task_data_management.py
src/rfr_final/final/: __init__.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
